# poc-axum-sqlx

./: .env.dev  .gitignore  Cargo.toml  README.md
migrations/: schema.sql
src/: app.rs  config.rs  error.rs  main.rs
src/models/: comment.rs  mod.rs  status.rs  task.rs  task_type.rs  user.rs
src/routes/: mod.rs  users.rs
